--- a/style.css
+++ b/style.css
@@ -75,6 +75,13 @@ span{
   color: var(--main-color);
 }
 
+#menu-icon {
+  font-size: 3.6rem;
+  color: var(--text-color);
+  cursor: pointer;
+  display: none; /* hidden by default */
+}
+
 .home{
   display: flex;
   justify-content: center;
@@ -353,6 +360,10 @@ span{
     font-size: 45%;
   }
 
+  #menu-icon {
+    display: block;
+  }
+
   .home-content h1 {
     font-size: 3rem;
   }
@@ -370,3 +381,4 @@ span{
     padding: 1rem;
   }
 }
+
