--- a/style.css
+++ b/style.css
@@ -380,5 +380,15 @@ span{
     font-size: 1.1rem;
     padding: 1rem;
   }
+
+  .footer{
+    flex-direction: column-reverse;
+  }
+
+  .footer p{
+    text-align: center;
+    margin-top: 2rem;
+  }
 }
+
 
